JSW Devsb/src/objects/Area__c.object
<CustomObject>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>BillingPostalCode</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Areas</relationshipLabel>
        <relationshipName>Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Adilabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kamareddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karimnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nalgonda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nirmal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siddipet</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visit_Purpose__c</fullName>
        <label>Visit Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Payment Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Office Review</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Areas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>